# Klos

./: .gitignore  .gitmodules  Makefile  README.md  bintil_cross.sh  bochsrc.txt  docs.md  gcc_cross.sh  image.py  installtools.sh  kfs.md  kfs.py  limine.conf  limine_inst.sh  log.txt  pci.ids  pci_ids_v2023-05-23.ids
Klos/: Cargo.toml  run.bat  x86.bat
Klos/src/: main.rs
kfs/: doc.md  kfs.py
klos/: docs.md
klos/src/: boot.asm
klos/src/kernel/: main.c
src/: biosboot.S  boot.asm  boot.x86.S  entry.asm  entry.c  kernel.c  limineboot.c  limineboot.ld  uefi.c  uefiboot.c
src/kernel/: gdt.h  kernel.ld  linker.ld  main.asm  main.c  main.x86.S  mem.h  pci.h  process.h
src/kernel/arch/: interrupt.x86_64.c  interrupt.x86_64.h  main.x86_64.S  main.x86_64.h
src/kernel/disc/: atapio.c  atapio.h  disc.c  disc.h
src/kernel/display/: display.h
src/kernel/memory/: e820.h  heap.h  inite820.h  mem.c  mem.h  types.h
src/kernel/util/: int.h  io.c  io.h  stdint.h  str.c  str.h  util.c
src/kernel/x86/: gdt.c  main.x86.S
src/lowkernel/: main.c
